// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`external_vis_context exportVisContext should work correctly 1`] = `
Object {
  "attributes": Object {
    "references": Array [],
    "state": Object {
      "datasourceStates": Object {
        "textBased": Object {
          "indexPatternRefs": Array [],
          "initialContext": Object {
            "contextualFields": Array [
              "Dest",
              "AvgTicketPrice",
            ],
            "dataViewSpec": Object {
              "allowNoIndex": false,
              "fields": Object {
                "AvgTicketPrice": Object {
                  "aggregatable": true,
                  "count": 0,
                  "esTypes": Array [
                    "float",
                  ],
                  "format": Object {
                    "id": "number",
                    "params": Object {
                      "pattern": "$0,0.[00]",
                    },
                  },
                  "isMapped": true,
                  "name": "AvgTicketPrice",
                  "readFromDocValues": true,
                  "scripted": false,
                  "searchable": true,
                  "shortDotsEnable": false,
                  "type": "number",
                },
                "Dest": Object {
                  "aggregatable": true,
                  "count": 0,
                  "esTypes": Array [
                    "keyword",
                  ],
                  "format": Object {
                    "id": "string",
                  },
                  "isMapped": true,
                  "name": "Dest",
                  "readFromDocValues": true,
                  "scripted": false,
                  "searchable": true,
                  "shortDotsEnable": false,
                  "type": "string",
                },
                "timestamp": Object {
                  "aggregatable": true,
                  "count": 0,
                  "esTypes": Array [
                    "date",
                  ],
                  "format": Object {
                    "id": "date",
                  },
                  "isMapped": true,
                  "name": "timestamp",
                  "readFromDocValues": true,
                  "scripted": false,
                  "searchable": true,
                  "shortDotsEnable": false,
                  "type": "date",
                },
              },
              "id": "d3d7af60-4c81-11e8-b3d7-01146121b73d",
              "name": "Kibana Sample Data Flights",
              "sourceFilters": Array [],
              "timeFieldName": "timestamp",
              "title": "kibana_sample_data_flights",
              "version": "WzM1ODA3LDFd",
            },
            "fieldName": "",
            "query": Object {
              "esql": "FROM \\"kibana_sample_data_flights\\"",
            },
          },
          "layers": Object {
            "46aa21fa-b747-4543-bf90-0b40007c546d": Object {
              "columns": Array [
                Object {
                  "columnId": "81e332d6-ee37-42a8-a646-cea4fc75d2d3",
                  "fieldName": "Dest",
                  "meta": Object {
                    "type": "string",
                  },
                },
                Object {
                  "columnId": "5b9b8b76-0836-4a12-b9c0-980c9900502f",
                  "fieldName": "AvgTicketPrice",
                  "meta": Object {
                    "type": "number",
                  },
                },
              ],
              "index": "d3d7af60-4c81-11e8-b3d7-01146121b73d",
              "query": Object {
                "esql": "FROM kibana_sample_data_flights | keep Dest, AvgTicketPrice",
              },
              "table": Object {
                "columns": Array [
                  Object {
                    "id": "avg(bytes)",
                    "isNull": false,
                    "meta": Object {
                      "type": "number",
                    },
                    "name": "avg(bytes)",
                  },
                  Object {
                    "id": "extension.keyword",
                    "isNull": false,
                    "meta": Object {
                      "type": "string",
                    },
                    "name": "extension.keyword",
                  },
                ],
                "rows": Array [
                  Object {
                    "avg(bytes)": 3850,
                    "extension.keyword": "",
                  },
                  Object {
                    "avg(bytes)": 5393.5,
                    "extension.keyword": "css",
                  },
                  Object {
                    "avg(bytes)": 3252,
                    "extension.keyword": "deb",
                  },
                ],
                "type": "datatable",
              },
              "timeField": "timestamp",
            },
          },
        },
      },
      "filters": Array [],
      "query": Object {
        "esql": "from logstash | stats avg(bytes) by extension.keyword",
      },
      "visualization": Object {
        "gridConfig": Object {
          "isCellLabelVisible": false,
          "isXAxisLabelVisible": true,
          "isXAxisTitleVisible": false,
          "isYAxisLabelVisible": true,
          "isYAxisTitleVisible": false,
          "type": "heatmap_grid",
        },
        "layerId": "46aa21fa-b747-4543-bf90-0b40007c546d",
        "layerType": "data",
        "legend": Object {
          "isVisible": true,
          "position": "right",
          "type": "heatmap_legend",
        },
        "shape": "heatmap",
        "valueAccessor": "5b9b8b76-0836-4a12-b9c0-980c9900502f",
        "xAccessor": "81e332d6-ee37-42a8-a646-cea4fc75d2d3",
      },
    },
    "title": "Heat map",
    "visualizationType": "lnsHeatmap",
  },
  "requestData": Object {
    "breakdownField": undefined,
    "dataViewId": "index-pattern-with-timefield-id",
    "timeField": "timestamp",
    "timeInterval": undefined,
  },
  "suggestionType": "lensSuggestion",
}
`;

exports[`external_vis_context exportVisContext should work correctly 2`] = `
Object {
  "attributes": Object {
    "references": Array [],
    "state": Object {
      "datasourceStates": Object {
        "textBased": Object {
          "indexPatternRefs": Array [],
          "initialContext": Object {
            "contextualFields": Array [
              "Dest",
              "AvgTicketPrice",
            ],
            "dataViewSpec": Object {
              "allowNoIndex": false,
              "fields": Object {
                "AvgTicketPrice": Object {
                  "aggregatable": true,
                  "count": 0,
                  "esTypes": Array [
                    "float",
                  ],
                  "format": Object {
                    "id": "number",
                    "params": Object {
                      "pattern": "$0,0.[00]",
                    },
                  },
                  "isMapped": true,
                  "name": "AvgTicketPrice",
                  "readFromDocValues": true,
                  "scripted": false,
                  "searchable": true,
                  "shortDotsEnable": false,
                  "type": "number",
                },
                "Dest": Object {
                  "aggregatable": true,
                  "count": 0,
                  "esTypes": Array [
                    "keyword",
                  ],
                  "format": Object {
                    "id": "string",
                  },
                  "isMapped": true,
                  "name": "Dest",
                  "readFromDocValues": true,
                  "scripted": false,
                  "searchable": true,
                  "shortDotsEnable": false,
                  "type": "string",
                },
                "timestamp": Object {
                  "aggregatable": true,
                  "count": 0,
                  "esTypes": Array [
                    "date",
                  ],
                  "format": Object {
                    "id": "date",
                  },
                  "isMapped": true,
                  "name": "timestamp",
                  "readFromDocValues": true,
                  "scripted": false,
                  "searchable": true,
                  "shortDotsEnable": false,
                  "type": "date",
                },
              },
              "id": "d3d7af60-4c81-11e8-b3d7-01146121b73d",
              "name": "Kibana Sample Data Flights",
              "sourceFilters": Array [],
              "timeFieldName": "timestamp",
              "title": "kibana_sample_data_flights",
              "version": "WzM1ODA3LDFd",
            },
            "fieldName": "",
            "query": Object {
              "esql": "FROM \\"kibana_sample_data_flights\\"",
            },
          },
          "layers": Object {
            "46aa21fa-b747-4543-bf90-0b40007c546d": Object {
              "columns": Array [
                Object {
                  "columnId": "81e332d6-ee37-42a8-a646-cea4fc75d2d3",
                  "fieldName": "Dest",
                  "meta": Object {
                    "type": "string",
                  },
                },
                Object {
                  "columnId": "5b9b8b76-0836-4a12-b9c0-980c9900502f",
                  "fieldName": "AvgTicketPrice",
                  "meta": Object {
                    "type": "number",
                  },
                },
              ],
              "index": "d3d7af60-4c81-11e8-b3d7-01146121b73d",
              "query": Object {
                "esql": "FROM kibana_sample_data_flights | keep Dest, AvgTicketPrice",
              },
              "timeField": "timestamp",
            },
          },
        },
      },
      "filters": Array [],
      "query": Object {
        "esql": "from logstash | stats avg(bytes) by extension.keyword",
      },
      "visualization": Object {
        "gridConfig": Object {
          "isCellLabelVisible": false,
          "isXAxisLabelVisible": true,
          "isXAxisTitleVisible": false,
          "isYAxisLabelVisible": true,
          "isYAxisTitleVisible": false,
          "type": "heatmap_grid",
        },
        "layerId": "46aa21fa-b747-4543-bf90-0b40007c546d",
        "layerType": "data",
        "legend": Object {
          "isVisible": true,
          "position": "right",
          "type": "heatmap_legend",
        },
        "shape": "heatmap",
        "valueAccessor": "5b9b8b76-0836-4a12-b9c0-980c9900502f",
        "xAccessor": "81e332d6-ee37-42a8-a646-cea4fc75d2d3",
      },
    },
    "title": "Heat map",
    "visualizationType": "lnsHeatmap",
  },
  "requestData": Object {
    "dataViewId": "index-pattern-with-timefield-id",
    "timeField": "timestamp",
  },
  "suggestionType": "lensSuggestion",
}
`;
